@@ -24,7 +24,6 @@
         "pear-pear.php.net/net_sieve": ">=1.3.2",
         "pear/mail_mime": ">=1.8.9",
         "pear/net_smtp": "dev-master",
-        "pear/mail_mime-decode": ">=1.5.5",
         "patchwork/utf8": "1.2.x"
     },
     "require-dev": {
