@@ -23,7 +23,6 @@ include_path directory of your webserver. Some classes of the framework require
 one or multiple of the following [PEAR][pear] libraries:
 
 - Mail_Mime 1.8.1 or newer
-- Mail_mimeDecode 1.5.5 or newer
 - Net_SMTP (latest from https://github.com/pear/Net_SMTP/)
 - Net_IDNA2 0.1.1 or newer
 - Auth_SASL 1.0.6 or newer
