@@ -1,0 +1,56 @@
+MIME-Version: 1.0
+Content-Type: multipart/alternative;
+ boundary="=_68eeaf4ab95b5312965e45c33362338e"
+Date: Sat, 27 Jun 2015 08:41:48 +0200
+From: alec@domain.tld
+To: alec@domain.tld
+Subject: test html + image
+Message-ID: <b490c541b3bf9d6c03a65b6da6e3152f@alec.pl>
+User-Agent: Roundcube Webmail/1.2-git
+
+--=_68eeaf4ab95b5312965e45c33362338e
+Content-Transfer-Encoding: 7bit
+Content-Type: text/plain; charset=US-ASCII
+
+this is test
+--=_68eeaf4ab95b5312965e45c33362338e
+Content-Type: multipart/related;
+ boundary="=_a9368338354ce1dee6d068bda60f3cc4"
+
+--=_a9368338354ce1dee6d068bda60f3cc4
+Content-Transfer-Encoding: quoted-printable
+Content-Type: text/html; charset=UTF-8
+
+<html><head><meta http-equiv=3D"Content-Type" content=3D"text/html; charset=
+=3DUTF-8" /></head><body style=3D'font-size: 10pt'>
+<p>this is test</p>
+<p><img src=3D"cid:1435387308558e45acc0292830140312@domain.tld" alt=3D"" width=
+=3D"24" height=3D"24" /></p>
+</body></html>
+
+--=_a9368338354ce1dee6d068bda60f3cc4
+Content-Transfer-Encoding: base64
+Content-ID: <1435387308558e45acc0292830140312@domain.tld>
+Content-Type: image/jpeg;
+ name=photo-mini.jpg
+Content-Disposition: inline;
+ filename=photo-mini.jpg;
+ size=793
+
+/9j/4AAQSkZJRgABAQEASABIAAD/2wBDAAoHBwkHBgoJCAkLCwoMDxkQDw4ODx4WFxIZJCAmJSMg
+IyIoLTkwKCo2KyIjMkQyNjs9QEBAJjBGS0U+Sjk/QD3/2wBDAQsLCw8NDx0QEB09KSMpPT09PT09
+PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT3/wgARCAAYABgDAREA
+AhEBAxEB/8QAFgABAQEAAAAAAAAAAAAAAAAABAUD/8QAFgEBAQEAAAAAAAAAAAAAAAAAAwIB/9oA
+DAMBAAIQAxAAAAGjlGNp6hVmsTcdm6jmSrLH/8QAGxAAAwACAwAAAAAAAAAAAAAAAQIDABESISP/
+2gAIAQEAAQUCqOQaA0GJlUFs7c00q1bznQK1oFp//8QAGREAAwEBAQAAAAAAAAAAAAAAAAERAgMS
+/9oACAEDAQE/Acqs8ZJGYIdJROC2h6rp/8QAGhEAAwADAQAAAAAAAAAAAAAAAAERAhAxEv/aAAgB
+AgEBPwFuHplqHrHh0aYsYj//xAAgEAABBAEEAwAAAAAAAAAAAAAAAQIREjEQIjIzQVFh/9oACAEB
+AAY/Aq+zzI62UlBKuqp2YH/dIRjpNvI//8QAHBABAQEAAwADAAAAAAAAAAAAAREAITFBUXGR/9oA
+CAEBAAE/IZNdtXiPkOK/UY5yPZdCtQFD3GF3S/mg+36zcxM67zxjhyXf/9oADAMBAAIAAwAAABAU
+fgX/AP/EABgRAQEBAQEAAAAAAAAAAAAAAAERACEx/9oACAEDAQE/EONrEmeHFVDDY4AT2624BQmP
+b//EABkRAQEBAQEBAAAAAAAAAAAAAAERADEQQf/aAAgBAgEBPxCC5Bt3R5fpm1cnGUzLHf/EAB8Q
+AQEAAgIDAAMAAAAAAAAAAAERACExQVFxgZGhsf/aAAgBAQABPxAtWaL2BtT9H3BdmhtH1x8w1QFB
+woc5u4oJcpqPrBACtyKVdfzHhmnXZYygBKAJFrNTveSICmoJy9LdauUhKVIN8L41+c//2Q==
+--=_a9368338354ce1dee6d068bda60f3cc4--
+
+--=_68eeaf4ab95b5312965e45c33362338e--
